# ChangeLog for app-misc/freemind
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/freemind/ChangeLog,v 1.24 2006/12/11 13:13:04 caster Exp $

*freemind-0.8.0-r2 (11 Dec 2006)

  11 Dec 2006; Vlastimil Babka <caster@gentoo.org>
  -freemind-0.8.0_rc2.ebuild, -freemind-0.8.0.ebuild,
  -freemind-0.8.0-r1.ebuild, +freemind-0.8.0-r2.ebuild:
  Fix launcher to make it work. Thanks to everyone in bug #142147, especially
  Daniel Kreßner <gardak@gmx.net> for identifying the problem and Vlad-Mihai
  Sima <vladmihaisima@yahoo.com> for the correct solution. Remove old cruft.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  freemind-0.7.1-r1.ebuild:
  Dropping sparc keywords, see #96229

*freemind-0.8.0-r1 (27 Jul 2006)

  27 Jul 2006; Joshua Nichols <nichoj@gentoo.org> +freemind-0.8.0-r1.ebuild:
  Revision bump to support new Java system.

  24 Mar 2006; Luca Barbato <lu_zero@gentoo.org> freemind-0.8.0.ebuild:
  Marked ~ppc

*freemind-0.8.0 (11 Jan 2006)

  11 Jan 2006; Luca Barbato <lu_zero@gentoo.org> +freemind-0.8.0.ebuild:
  Updated version, works fine on ppc and amd64

  16 Sep 2005; Michael Sterrett <mr_bones_@gentoo.org>
  freemind-0.8.0_rc2.ebuild:
  needs app-arch/unzip

  02 Jul 2005; Thomas Matthijs <axxo@gentoo.org> freemind-0.7.1.ebuild,
  freemind-0.7.1-r1.ebuild, freemind-0.8.0_rc2.ebuild:
  fix wrapper script

  05 May 2005; Sven Wegener <swegener@gentoo.org> freemind-0.7.1.ebuild,
  freemind-0.7.1-r1.ebuild, freemind-0.8.0_rc2.ebuild:
  Removed trailing * from <, <=, >= and > dependencies.

*freemind-0.8.0_rc2 (20 Apr 2005)

  20 Apr 2005; Chris Aniszczyk <zx@gentoo.org> +freemind-0.8.0_rc2.ebuild:
  Version bump. Closes #89864

*freemind-0.7.1-r1 (12 Jan 2005)

  12 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> +freemind-0.7.1-r1.ebuild,
  freemind-0.7.1.ebuild:
  freemind now generates an menu entry. thanks to Sebastian Roth