@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/freemind/freemind-0.8.0-r2.ebuild,v 1.1 2006/12/11 13:13:04 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/freemind/freemind-0.8.0-r2.ebuild,v 1.2 2007/01/19 14:18:59 masterdriverz Exp $
 
 inherit java-pkg-2 java-ant-2 eutils
 
@@ -21,7 +21,6 @@ DEPEND="|| (
 	dev-java/ant-core
 	app-arch/unzip"
 RDEPEND=">=virtual/jre-1.4"
-RESTRICT="nomirror"
 
 S="${WORKDIR}/${PN}"
 
