@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/freemind
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/freemind/ChangeLog,v 1.24 2006/12/11 13:13:04 caster Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/freemind/ChangeLog,v 1.25 2007/01/19 14:18:59 masterdriverz Exp $
+
+  19 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
+  freemind-0.8.0-r2.ebuild:
+  QA: remove invalid RESTRICT="mirror"
 
 *freemind-0.8.0-r2 (11 Dec 2006)
 
